<resources>
    <string name="app_name">Gratyfi Me</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="jsonURL">https://api.myjson.com/bins/312gb</string>
    <string name="description">Card Image</string>
    <string name="title_activity_maps">About company</string>
    <string name="title_activity_detail">Offer details</string>
    <string name="conditions_label">Conditions</string>
    <string name="address_label">Address:</string>
    <string name="tel_label">Tel:</string>
    <string name="website_label">Website:</string>
    <string name="email_label">Email:</string>
    <string name="twitter_label">Twitter:</string>
    <string name="share_offer_title">Share</string>
    <string name="offer_id_link">http://www.gratyfi.me/Offers/OfferDetail.aspx?ID=</string>
</resources>
